Добавил подтверждение для "удалить все", добавил еще одну переменную окружения

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,2 @@
 token_telebot = "токен вашего телеграм-бота"
+admin_id = "id админа для получения сообщения об ошибке бота и его остановки. Можно узнать из print(message['from_user']['id'])"
